--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link rel="stylesheet" href="style2.css" />
     <title>Light Me Up</title>
   </head>
   <body>
