Animation effects optimized.

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
       rel="stylesheet"
     />
 
-    <!-- <link rel="stylesheet" href="style.css" /> -->
-    <link rel="stylesheet" href="style2.css" />
+    <!-- <link rel="stylesheet" href="style2.css" /> -->
+    <link rel="stylesheet" href="style.css" />
     <title>Light Me Up</title>
   </head>
   <body>
     <div class="container">
-      <div class="letter letter-1">O</div>
-      <div class="letter letter-2">l</div>
-      <div class="letter letter-3">i</div>
-      <div class="letter letter-4">v</div>
-      <div class="letter letter-5">e</div>
-      <div class="letter letter-6">i</div>
-      <div class="letter letter-7">r</div>
-      <div class="letter letter-8">a</div>
+      <span class="letter letter-1">O</span>
+      <span class="letter letter-2">l</span>
+      <span class="letter letter-3">i</span>
+      <span class="letter letter-4">v</span>
+      <span class="letter letter-5">e</span>
+      <span class="letter letter-6">i</span>
+      <span class="letter letter-7">r</span>
+      <span class="letter letter-8">a</span>
     </div>
   </body>
 </html>
