Animation effects optimized v2.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap"
       rel="stylesheet"
@@ -17,14 +23,15 @@
   </head>
   <body>
     <div class="container">
-      <span class="letter letter-1">O</span>
+      <span class="letter letter-1">o</span>
       <span class="letter letter-2">l</span>
       <span class="letter letter-3">i</span>
-      <span class="letter letter-4">v</span>
-      <span class="letter letter-5">e</span>
-      <span class="letter letter-6">i</span>
-      <span class="letter letter-7">r</span>
-      <span class="letter letter-8">a</span>
+      <span class="letter letter-4">c</span>
+      <span class="letter letter-5">o</span>
+      <span class="letter letter-6">d</span>
+      <span class="letter letter-7">i</span>
+      <span class="letter letter-8">n</span>
+      <span class="letter letter-9">g</span>
     </div>
   </body>
 </html>
