--- a/index.html
+++ b/index.html
@@ -12,26 +12,31 @@
       href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link
+    <!-- web dev class exercise elements -->
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap"
       rel="stylesheet"
-    />
-
+    /> -->
     <!-- <link rel="stylesheet" href="style2.css" /> -->
     <link rel="stylesheet" href="style.css" />
     <title>Light Me Up</title>
   </head>
   <body>
     <div class="container">
-      <span class="letter letter-1">o</span>
-      <span class="letter letter-2">l</span>
-      <span class="letter letter-3">i</span>
-      <span class="letter letter-4">c</span>
-      <span class="letter letter-5">o</span>
-      <span class="letter letter-6">d</span>
-      <span class="letter letter-7">i</span>
-      <span class="letter letter-8">n</span>
-      <span class="letter letter-9">g</span>
+      <span class="letter letter-1">w</span>
+      <span class="letter letter-2">e</span>
+      <span class="letter letter-3">b</span>
+      <span class="letter letter-4">d</span>
+      <span class="letter letter-5">e</span>
+      <span class="letter letter-6">v</span>
+      <span class="letter letter-7">r</span>
+      <span class="letter letter-8">o</span>
+      <span class="letter letter-9">c</span>
+      <span class="letter letter-10">k</span>
+      <span class="letter letter-11">s</span>
+      <span class="letter letter-12">!</span>
+      <span class="letter letter-13">!</span>
+      <span class="letter letter-14">!</span>
     </div>
   </body>
 </html>
